humidity/webapp/nohup.out
 * Serving Flask app "app" (lazy loading)
 * Environment: production
   WARNING: Do not use the development server in a production environment.
   Use a production WSGI server instead.
 * Debug mode: on
 * Running on http://0.0.0.0:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 217-361-254
192.168.0.33 - - [05/Apr/2020 10:47:30] "GET / HTTP/1.1" 200 -
192.168.0.33 - - [05/Apr/2020 10:47:30] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.33 - - [05/Apr/2020 10:47:38] "GET / HTTP/1.1" 200 -
192.168.0.33 - - [05/Apr/2020 10:47:38] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.33 - - [05/Apr/2020 10:47:47] "GET / HTTP/1.1" 200 -
192.168.0.33 - - [05/Apr/2020 10:47:47] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 10:49:05] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 10:49:05] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 10:54:11] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 10:54:11] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 14:35:40] "GET /favicon.ico HTTP/1.1" 404 -
192.168.0.10 - - [05/Apr/2020 14:35:42] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 14:35:42] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 14:57:05] "GET /favicon.ico HTTP/1.1" 404 -
192.168.0.10 - - [05/Apr/2020 15:36:27] "GET /favicon.ico HTTP/1.1" 404 -
192.168.0.10 - - [05/Apr/2020 15:36:29] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 15:36:30] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.34 - - [05/Apr/2020 15:40:05] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.34 - - [05/Apr/2020 15:40:06] "GET / HTTP/1.1" 200 -
192.168.0.34 - - [05/Apr/2020 15:40:06] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 16:04:23] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 16:04:24] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 16:23:14] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 16:23:14] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 17:38:33] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 17:38:33] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 17:51:53] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 17:51:53] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:03:39] "GET /favicon.ico HTTP/1.1" 404 -
192.168.0.10 - - [05/Apr/2020 18:03:41] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:03:41] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:09:31] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:09:31] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:15:48] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:15:49] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:29:43] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:29:43] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:38:30] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:38:30] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:41:05] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:41:05] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:47:45] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 18:47:45] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:03:55] "GET /favicon.ico HTTP/1.1" 404 -
192.168.0.10 - - [05/Apr/2020 19:03:57] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:03:57] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:15:46] "GET /favicon.ico HTTP/1.1" 404 -
/usr/lib/python3/dist-packages/matplotlib/pyplot.py:514: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).
  max_open_warning, RuntimeWarning)
192.168.0.10 - - [05/Apr/2020 19:15:49] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:15:49] "GET /static/graph.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:19:22] "GET /favicon.ico HTTP/1.1" 404 -
/usr/lib/python3/dist-packages/matplotlib/pyplot.py:514: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).
  max_open_warning, RuntimeWarning)
192.168.0.10 - - [05/Apr/2020 19:19:24] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:19:24] "GET /static/graph.png HTTP/1.1" 200 -
/usr/lib/python3/dist-packages/matplotlib/pyplot.py:514: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).
  max_open_warning, RuntimeWarning)
192.168.0.10 - - [05/Apr/2020 19:21:07] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:21:07] "GET /static/graph.png HTTP/1.1" 200 -
 * Detected change in '/home/pi/Development/raspberry-pi/humidity/webapp/Humidity.py', reloading
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
Running!
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 217-361-254
192.168.0.10 - - [05/Apr/2020 19:31:11] "GET / HTTP/1.1" 500 -
Traceback (most recent call last):
  File "/usr/lib/python3/dist-packages/flask/app.py", line 2309, in __call__
    return self.wsgi_app(environ, start_response)
  File "/usr/lib/python3/dist-packages/flask/app.py", line 2295, in wsgi_app
    response = self.handle_exception(e)
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1741, in handle_exception
    reraise(exc_type, exc_value, tb)
  File "/usr/lib/python3/dist-packages/flask/_compat.py", line 35, in reraise
    raise value
  File "/usr/lib/python3/dist-packages/flask/app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "/usr/lib/python3/dist-packages/flask/_compat.py", line 35, in reraise
    raise value
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "/usr/lib/python3/dist-packages/flask/app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "/home/pi/Development/raspberry-pi/humidity/webapp/app.py", line 9, in index
    import Humidity
File "/home/pi/Development/raspberry-pi/humidity/webapp/Humidity.py", line 40
    fig, ax = plt.subplots(1, figsize=(10,6))
      ^
SyntaxError: invalid syntax
192.168.0.10 - - [05/Apr/2020 19:31:12] "GET /?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:12] "GET /?__debugger__=yes&cmd=resource&f=jquery.js HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:12] "GET /?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:12] "GET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:12] "GET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:12] "GET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:33] "GET / HTTP/1.1" 200 -
192.168.0.10 - - [05/Apr/2020 19:31:33] "GET /static/graph.png HTTP/1.1" 200 -
